--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,5 @@
 deployment:
-hub:
-branch: master
-commands:
-  - $DOCKER_HUB_TRIGGER
+  dockerhub:
+  branch: master
+  commands:
+    - $DOCKER_HUB_TRIGGER
